new figures and fixes

--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -105,7 +105,13 @@
   year = {2016},
 }
 
-
+@book{dynamicGainPic,
+	author    = {Udo Zölzer},
+	title     = {Digital Audio Signal Processing},
+	publisher = {A John Wiley and Sons, Ltd, Publication},
+	edition  = {2rd},
+	year      = {2008},
+}
 
 
 
