--- a/Rapport/1Chapters/2Concept/SignalProcessingTool.tex
+++ b/Rapport/1Chapters/2Concept/SignalProcessingTool.tex
@@ -86,7 +86,7 @@ A DGC is also seen in more detail on \autoref{fig:limiter_block}.
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{figures/Limiter_block.png}
-\caption{DGC block diagram.}
+\caption{DGC block diagram \citep{dynamicGainPic}.}
 \label{fig:limiter_block}
 \end{figure}   
 
@@ -101,7 +101,7 @@ When these different thresholds are surpassed, a specific linear function will b
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.8\textwidth]{figures/limiter_static_curve.png}
-\caption{Static curve with the parameters (LT, CT, ET and NT).}
+\caption{Static curve with the parameters (LT, CT, ET and NT) \citep{dynamicGainPic}.}
 \label{fig:limiter_static}
 \end{figure}  
 
