--- a/Rapport/1Chapters/1Preanalysis/Introduction.tex
+++ b/Rapport/1Chapters/1Preanalysis/Introduction.tex
@@ -1,9 +1,9 @@
 \chapter{Introduction}
-The active loudspeaker is more and more used instead of the passive speaker which means that the possibilities of processing the input signal like equalizing, limiting and compressing is more common.     
+Loudspeakers today come in all sizes, types and shapes, has existed for over a century and is used by all, but it has yet to be perfected. In the 1980's an entirely new loudspeaker type, the active loudspeaker, began popping up and has gained popularity ever since. The rise of the active loudspeaker can probably be attributed to the rise of the digital signal processing which means that there are endlessly possibilities of processing a input signal like equalizing, compressing or synthesizing for example.
+
+These possibilities means the the potential of the active loudspeaker is far greater than the passive loudspeaker because the active loudspeaker has the amplifier   
 
 Danger
-
-digital
 
 protection
 
