--- a/Rapport/1Chapters/Simulation.tex
+++ b/Rapport/1Chapters/Simulation.tex
@@ -141,7 +141,7 @@ The total ouput as seen on \autoref{fig:TotalOutputSimulation} shows how the sig
     \centering
     \tikzsetnextfilename{OutputSimulation}
     \input{figures/OutputSimulation.tex}
-    \caption{Output of the entire spectrum during the 10 second simulation}
+    \caption{Output of the entire output in time during the 10 second simulation}
     \label{fig:TotalOutputSimulation}
 \end{figure}
 
@@ -151,7 +151,7 @@ It is seen on \autoref{fig:TotalOutputZoomSimulation} that if no limiter is appl
     \centering
     \tikzsetnextfilename{Output3Zoom}
     \input{figures/Output3.tex}
-    \caption{Output of the entire spectrum with a zoom on 9.468s to 9.478s}
+    \caption{Output of the time signal from 9.468s to 9.478s}
     \label{fig:TotalOutputZoomSimulation}
 \end{figure}
 
